--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
 	"name": "codegentool",
 	"displayName": "Codegen tool",
 	"description": "VSCode Extension for codegen tool",
-	"version": "1.2.0",
+	"version": "1.2.1",
 	"publisher": "j-bo",
 	"icon": "images/icon.png",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/j-bo/vscode-codegen.git"},
+		"url": "https://github.com/j-bo/vscode-codegen.git"
+	},
 	"engines": {
 		"vscode": "^1.39.0"
 	},
